--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -13,3 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.page {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.on-hover:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
