--- a/src/components/navigation-bar/NavigationBar.scss
+++ b/src/components/navigation-bar/NavigationBar.scss
@@ -1,7 +1,8 @@
-.navbar-brand.company-logo {
-  color: #6c757d;
-  font-size: 2rem;
+.navbar-width {
+  max-width: 800px;
+  margin: 0 auto;
 }
-.navbar-bg {
-  background-color: #17a2b8;
+
+.navbar-brand.company-logo {
+  font-size: 2rem;
 }
